fix word-wrap for long words in translation editor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,7 @@ span.morethan90 {
 
 .editor .translation {
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 .editor .strings {
